--- a/retrosmart-ghost/metadata.desktop
+++ b/retrosmart-ghost/metadata.desktop
@@ -5,7 +5,7 @@ Comment=A retrosmart theme for KDE
 X-KDE-PluginInfo-Author=Manuel
 X-KDE-PluginInfo-Email=mdomlop@gmail.com
 X-KDE-PluginInfo-Name=
-X-KDE-PluginInfo-Version=0.1
+X-KDE-PluginInfo-Version=1
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL3
