--- a/changelog.in
+++ b/changelog.in
@@ -2,4 +2,4 @@ retrosmart-aurorae-themes (0.1a) unstable; urgency=medium
 
 	* Version 0.1a.
 
- -- Manuel Domínguez López <mdomlop@gmail.com>  Fri, 24 Nov 2017 07:06:07 +0100
+ -- Manuel Domínguez López <@mail@>  Fri, 24 Nov 2017 07:06:07 +0100
