Themes added: Babe, Lemon and Lime

--- a/changelog.in
+++ b/changelog.in
@@ -1,5 +1,12 @@
 retrosmart-aurorae-themes (1.1a) unstable; urgency=medium
 
+  * 1.2a.
+    - Themes added: Babe, Lemon and Lime.
+
+ -- Manuel Domínguez López <@mail@>  Sun, 18 Nov 2018 08:13:22 +0100
+
+retrosmart-aurorae-themes (1.1a) unstable; urgency=medium
+
   * 1.1a.
     - Fix Ghost, Milk and Sky themes.
     - Butane, Shadow, Heaven, Caelum, Forest and Laurum themes added.
